--- a/templates/parts/npc_usage_sheet.html
+++ b/templates/parts/npc_usage_sheet.html
@@ -26,9 +26,9 @@
                     {{> "systems/shadowrun6-eden/templates/parts/npc-attributes-ro.html" attributes=system.attributes}}
                     <dl>
                         <dt>{{ localize 'shadowrun6.actor.initiative' }}</dt>
-                        <dd>{{system.initiative.physical.base}} + {{system.initiative.physical.dicePool}}d6</dd>
+                        <dd>{{system.initiative.physical.pool}} + {{system.initiative.physical.dicePool}}d6</dd>
                         <dt>{{ localize 'shadowrun6.actor.initiative_astral' }}</dt>
-                        <dd>{{system.initiative.astral.base}} + {{system.initiative.astral.dicePool}}d6</dd>
+                        <dd>{{system.initiative.astral.pool}} + {{system.initiative.astral.dicePool}}d6</dd>
                         <dt>{{ localize 'shadowrun6.actor.actions' }}</dt>
                         <dd>1 {{ localize 'shadowrun6.actor.actions_major' }}, {{system.initiative.actions}} {{localize 'shadowrun6.actor.actions_minor'}}</dd>
                         {{> "systems/shadowrun6-eden/templates/parts/npc-skills.html" skills=system.skills}}
