Added enabler to be able to drag roll links (to allow drop to macrobar in the future) (#30)

--- a/templates/parts/attributes-augmented.html
+++ b/templates/parts/attributes-augmented.html
@@ -2,7 +2,7 @@
     {{#ifIn id ../config.PRIMARY_ATTRIBUTES}}
     <div class="attribute" augmented-ui="b-clip-x exe">
          <p>
-				<a class="attributeonly-roll attribute-poolmod" data-pool="{{attribute.pool}}" data-item-id="{{id}}">
+				<a class="attributeonly-roll attribute-poolmod" data-pool="{{attribute.pool}}" data-roll-id="{{id}}">
                {{localize (concat "attrib." id )}}
             </a>
          </p>
