--- a/templates/parts/section-magicbase.html
+++ b/templates/parts/section-magicbase.html
@@ -50,7 +50,7 @@
 				<td class="centered">{{system.defensepool.drain.base}}</td>
 				<td class="centered"><input name="magicDpAstralMod" class="centered" data-field="system.defensepool.drain.mod" type="text" value="{{system.defensepool.drain.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.drain.modString}}">{{system.defensepool.drain.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.drain.pool}}" data-item-id="drain"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.drain.pool}}" data-roll-id="drain"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 		</table>
 		</div>
