--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -117,7 +117,7 @@
 					style="width: 2em;">
 				</td>
 				<td class="centered" title="{{system.defensepool.fading.modString}}">{{system.defensepool.fading.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.fading.pool}}" data-item-id="fading"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.fading.pool}}" data-roll-id="fading"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			{{/if}}
 		</table>
