--- a/templates/parts/section-soakresist.html
+++ b/templates/parts/section-soakresist.html
@@ -35,7 +35,7 @@
 				<td class="centered"><input name="soakResistPhysMod" class="centered box" data-field="system.defensepool.physical.mod" type="text" value="{{system.defensepool.physical.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.physical.modString}}">{{system.defensepool.physical.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.physical.pool}}" data-item-id="physical"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.physical.pool}}" data-roll-id="physical"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Astral Combat -->
 			<tr>
@@ -44,7 +44,7 @@
 				<td class="centered"><input name="soakResistAstralMod" class="centered box" data-field="system.defensepool.astral.mod" type="text" value="{{system.defensepool.astral.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.astral.modString}}">{{system.defensepool.astral.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.astral.pool}}" data-item-id="astral"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.astral.pool}}" data-roll-id="astral"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Direct Combat spells-->
 			<tr>
@@ -53,7 +53,7 @@
 				<td class="centered"><input name="soakResistSpellsDirMod" class="centered box" data-field="system.defensepool.spells_direct.mod" type="text" value="{{system.defensepool.spells_direct.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.spells_direct.modString}}">{{system.defensepool.spells_direct.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_direct.pool}}" data-item-id="spells_direct"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_direct.pool}}" data-roll-id="spells_direct"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Indirect Combat spells-->
 			<tr>
@@ -62,7 +62,7 @@
 				<td class="centered"><input name="soakResistSpellsIndMod" class="centered box" data-field="system.defensepool.spells_indirect.mod" type="text" value="{{system.defensepool.spells_indirect.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.spells_indirect.modString}}">{{system.defensepool.spells_indirect.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_indirect.pool}}" data-item-id="spells_indirect"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_indirect.pool}}" data-roll-id="spells_indirect"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Resist Toxin -->
 			<tr>
@@ -70,7 +70,7 @@
 				<td class="centered"><label >{{system.defensepool.toxin.base}}</label></td>
 				<td class="centered"><input name="soakResistToxinMod" class="centered box" data-field="system.defensepool.toxin.mod" type="text" value="{{system.defensepool.toxin.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.toxin.modString}}">{{system.defensepool.toxin.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.toxin.pool}}" data-item-id="toxin"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.toxin.pool}}" data-roll-id="toxin"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Soak / Resist Damage-->
 			<tr>
@@ -79,7 +79,7 @@
 				<td class="centered"><input name="soakResistPhysDmgMod" class="centered box" data-field="system.defensepool.damage_physical.mod" type="text" value="{{system.defensepool.damage_physical.mod}}" data-dtype="Number"
 				  style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.damage_physical.modString}}">{{system.defensepool.damage_physical.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_physical.pool}}" data-item-id="damage_physical"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_physical.pool}}" data-roll-id="damage_physical"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Resist Astral Damage-->
 			<tr>
@@ -88,7 +88,7 @@
 				<td class="centered"><input name="soakResistAstralDmgMod" class="centered box" data-field="system.defensepool.damage_astral.mod" type="text" value="{{system.defensepool.damage_astral.mod}}" data-dtype="Number"
 				  style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.damage_astral.modString}}">{{system.defensepool.damage_astral.pool}}</td>
-				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_astral.pool}}" data-item-id="damage_astral"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_astral.pool}}" data-roll-id="damage_astral"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 		</table>
 	</div>
