--- a/templates/parts/pc-derived.html
+++ b/templates/parts/pc-derived.html
@@ -48,7 +48,7 @@
 					id="derived1" style="width: 2em" title="{{system.derived.composure.modString}}">
 				</td>
 				<td class="centered">{{system.derived.composure.pool}}</td>
-				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.composure.pool}}" data-item-id="composure"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.composure.pool}}" data-roll-id="composure"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Judge Intentions -->
 			<tr>
@@ -59,7 +59,7 @@
 					id="derived1" style="width: 2em" title="{{system.derived.judge_intentions.modString}}">
 				</td>
 				<td class="centered">{{system.derived.judge_intentions.pool}}</td>
-				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.judge_intentions.pool}}" data-item-id="judge_intentions"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.judge_intentions.pool}}" data-roll-id="judge_intentions"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Memory -->
 			<tr>
@@ -70,7 +70,7 @@
 					id="derived1" style="width: 2em" title="{{system.derived.memory.modString}}">
 				</td>
 				<td class="centered">{{system.derived.memory.pool}}</td>
-				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.memory.pool}}" data-item-id="memory"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.memory.pool}}" data-roll-id="memory"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 			<!-- Lift/Carry -->
 			<tr>
@@ -81,7 +81,7 @@
 					id="derived1" style="width: 2em" title="{{system.derived.lift_carry.modString}}">
 				</td>
 				<td class="centered">{{system.derived.lift_carry.pool}}</td>
-				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.lift_carry.pool}}" data-item-id="lift_carry"><i class="fas fa-dice-six"></i></a></td>
+				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.lift_carry.pool}}" data-roll-id="lift_carry"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
 		</table>
 	</div>
