--- a/templates/parts/section-matrixactions.html
+++ b/templates/parts/section-matrixactions.html
@@ -5,7 +5,7 @@
 	<div style="column-count: 2; background: radial-gradient(circle at center, #B6B6A4 100%, transparent 100%) no-repeat center; background-size: 2px 100%; margin-right: 5px;">
 
  		{{#each config.MATRIX_ACTIONS as |action actionId|}}
-       	<div class="draggable item" data-matrix-action-id="{{actionId}}" style="display: flex; font-size:small; align-items:center;">
+       	<div class="item" data-matrix-action-id="{{actionId}}" style="display: flex; font-size:small; align-items:center;">
 
        		<label style="flex-grow:6">{{localize (concat 'shadowrun6.matrixaction.' actionId)}}</label>
          	{{#if (ne (matrixPool actionId ../actor) 0)}}
