Add Matrix Damage field for Matrix Devices, Vehicles and Drone items (#24)

--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -118,6 +118,9 @@
   background: white;
   text-align: center;
 }
+.shadowrun6 input.box:disabled {
+  background: lightgrey;
+}
 
 .dice-tooltip .dice-rolls .die{
   position: relative;
