--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -23,7 +23,7 @@
                     </td>
                     <td style="text-align: center">
                         <select name="gearSubtype" data-field="system.subtype" data-field="system.subtype" class="subtypeselect">
-                            {{selectOptions config.subtypeList selected=item.system.subtype localize=true}}
+                            {{selectOptions config.subtypeList selected=item.system.subtype localize=true blank=(localize "shadowrun6.label.none") }}
                         </select></td>
 
                     <td style="text-align: center"><input name="needsRating" style="vertical-align: middle;" type="checkbox" {{checked item.system.needsRating}}
@@ -174,12 +174,18 @@
             )}}
             <table>
                 <tr>
+                    <th>{{localize 'shadowrun6.label.matrixMonitor'}}</th>
                     <th>{{localize 'shadowrun6.label.devRating'}}</th>
                     <th>{{localize 'shadowrun6.label.progSlots'}}</th>
                     <th>{{localize 'shadowrun6.label.dataproc.short'}}</th>
                     <th>{{localize 'shadowrun6.label.firewall.short'}}</th>
                 </tr>
                 <tr>
+                    <td class="box centered"> 
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                         / 
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                    </td>
                     <td class="box centered"> 
                         <input name="devRating" type="number" value="{{item.system.devRating}}" data-field="system.devRating" class="box centered" style="width:2em" />
                     </td>
@@ -199,12 +205,18 @@
             {{#if (eq item.system.subtype "CYBERDECK")}}
             <table>
                 <tr>
+                    <th>{{localize 'shadowrun6.label.matrixMonitor'}}</th>
                     <th>{{localize 'shadowrun6.label.devRating'}}</th>
                     <th>{{localize 'shadowrun6.label.progSlots'}}</th>
                     <th>{{localize 'shadowrun6.label.attack.short'}}</th>
                     <th>{{localize 'shadowrun6.label.sleaze.short'}}</th>
                 </tr>
                 <tr>
+                    <td class="box centered"> 
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                         / 
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                    </td>
                     <td class="box centered"> <input name="devRatingDeck" type="number" value="{{item.system.devRating}}"
                             data-field="system.devRating" class="box centered" style="width:2em" /></td>
                     <td class="box centered"> <input name="progSlotsDeck" type="number" value="{{item.system.progSlots}}"
@@ -242,7 +254,7 @@
                             class="box centered" style="width:2em" /></td>
                     <td class="box centered"> <input name="tspd" type="number" value="{{item.system.tspd}}" data-field="system.tspd"
                             class="box centered" style="width:3em" /></td>
-                    <td colspan="2"> <select name="gearVtype" data-field="system.vtype" data-field="system.vtype" class="typeselect">
+                    <td colspan="2" class="centered"> <select name="gearVtype" data-field="system.vtype" data-field="system.vtype" class="typeselect">
                             {{selectOptions config.VEHICLE_TYPE selected=item.system.vtype localize=true}}
                         </select>
                     </td>
@@ -254,7 +266,10 @@
                     <th>{{ localize 'shadowrun6.section.vehicles.column.sen' }}</th>
                     {{#if (eq item.system.type "VEHICLES")}}
                     <th>{{ localize 'shadowrun6.section.vehicles.column.sea' }}</th>
+                    {{else}}
+                    <th></th>
                     {{/if}}
+                    <th>{{localize 'shadowrun6.label.matrixMonitor'}}</th>
                 </tr>
                 <tr>
                     <td class="box centered"> <input name="bod" type="number" value="{{item.system.bod}}" data-field="system.bod"
@@ -268,7 +283,14 @@
                     {{#if (eq item.system.type "VEHICLES")}}
                     <td class="box centered"> <input name="sea" type="number" value="{{item.system.sea}}" data-field="system.sea"
                             class="box centered" style="width:2em" /></td>
+                    {{else}}
+                    <td></td>
                     {{/if}}
+                    <td class="box centered"> 
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                         / 
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                    </td>
 
                 </tr>
             </table>
