--- a/templates/parts/vehicle-stats.html
+++ b/templates/parts/vehicle-stats.html
@@ -14,34 +14,34 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr style="text-align:center">
+		<tr style="">
 			<td>
-				<input name="{{id}}HandlingOnTrack" data-field="system.handlOn" type="number" value="{{system.handlOn}}" data-dtype="Number" style="text-align:center" />
+				<input name="{{id}}HandlingOnTrack" data-field="system.handlOn" type="number" value="{{system.handlOn}}" data-dtype="Number" class="box" style="text-align:right; margin-right: 0px;" />
 			</td>
 			<td>/</td>
 			<td>
-				<input name="{{id}}HandlingOffroad" data-field="system.handlOff" type="number" value="{{system.handlOff}}" data-dtype="Number" style="text-align:center" />
+				<input name="{{id}}HandlingOffroad" data-field="system.handlOff" type="number" value="{{system.handlOff}}" data-dtype="Number" class="box" style="text-align:left; margin-left: 0px;" />
 			</td>
 			<td>
-				<input name="{{id}}AccelerationOnTrack" data-field="system.accOn" type="number" value="{{system.accOn}}" data-dtype="Number" style="text-align:right" />
+				<input name="{{id}}AccelerationOnTrack" data-field="system.accOn" type="number" value="{{system.accOn}}" data-dtype="Number" class="box" style="text-align:right; margin-right: 0px;" />
 			</td>
 			<td>/</td>
 			<td>
-				<input name="{{id}}AccelerationOffroad" data-field="system.accOff" type="number" value="{{system.accOff}}" data-dtype="Number" style="text-align:left" />
+				<input name="{{id}}AccelerationOffroad" data-field="system.accOff" type="number" value="{{system.accOff}}" data-dtype="Number" class="box" style="text-align:left; margin-left: 0px;" />
 			</td>
 			<td>
-				<input name="{{id}}SpeedIntervalOnTrack"  data-field="system.spdiOn" type="number" value="{{system.spdiOn}}" data-dtype="Number" style="text-align:right">
+				<input name="{{id}}SpeedIntervalOnTrack"  data-field="system.spdiOn" type="number" value="{{system.spdiOn}}" data-dtype="Number" class="box" style="text-align:right; margin-right: 0px;">
 			</td>
 			<td>/</td>
 			<td>
-				<input  name="{{id}}SpeedIntervalOffroad" data-field="system.spdiOff" type="number" value="{{system.spdiOff}}" data-dtype="Number" style="text-align:left">
+				<input  name="{{id}}SpeedIntervalOffroad" data-field="system.spdiOff" type="number" value="{{system.spdiOff}}" data-dtype="Number" class="box" style="text-align:left; margin-left: 0px;">
 			</td>
-			<td><input name="{{id}}TopSpeed" data-field="system.tspd" type="number" value="{{system.tspd}}" data-dtype="Number"></td>
-			<td><input name="{{id}}Body" data-field="system.bod" type="number" value="{{system.bod}}" data-dtype="Number"></td>
-			<td><input name="{{id}}Armor" data-field="system.arm" type="number" value="{{system.arm}}" data-dtype="Number"></td>
-			<td><input name="{{id}}Pilot" data-field="system.pil" type="number" value="{{system.pil}}" data-dtype="Number"></td>
-			<td><input name="{{id}}Sensor" data-field="system.sen" type="number" value="{{system.sen}}" data-dtype="Number"></td>
-			<td><input name="{{id}}Seats" data-field="system.sea" type="number" value="{{system.sea}}" data-dtype="Number"></td>
+			<td><input name="{{id}}TopSpeed" data-field="system.tspd" type="number" value="{{system.tspd}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}Body" data-field="system.bod" type="number" value="{{system.bod}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}Armor" data-field="system.arm" type="number" value="{{system.arm}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}Pilot" data-field="system.pil" type="number" value="{{system.pil}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}Sensor" data-field="system.sen" type="number" value="{{system.sen}}" data-dtype="Number" class="box"></td>
+			<td><input name="{{id}}Seats" data-field="system.sea" type="number" value="{{system.sea}}" data-dtype="Number" class="box"></td>
 		</tr>
 	</tbody>
 </table>
