--- a/templates/actor/shadowrun6-Vehicle-sheet.html
+++ b/templates/actor/shadowrun6-Vehicle-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}} vehicle-sheet" autocomplete="off">
 	<header class="sheet-header">
 		<div>
 		<img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="120" width="120" /><br/><br/>
@@ -15,14 +15,14 @@
    <section class="sheet-body">
 		<div style="display:flex; flex-wrap: wrap;">
       	{{!-- Basics Tab --}}
-         <div class="section">
-         	<h2><input name="name" data-field="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h2>
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-stats.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-speed.html"}}
-         </div>
-		    {{> "systems/shadowrun6-eden/templates/parts/vehicle-weapons.html"}}
-            {{> "systems/shadowrun6-eden/templates/parts/vehicle-piloting.html"}}
-			{{> "systems/shadowrun6-eden/templates/parts/section-autosoft.html"}}
+		<div class="section vehicle-stats">
+			<h2 class="section-title">{{localize 'TYPES.Actor.Vehicle' }}</h2>
+			{{> "systems/shadowrun6-eden/templates/parts/vehicle-stats.html"}}
+			{{> "systems/shadowrun6-eden/templates/parts/vehicle-speed.html"}}
+		</div>
+		{{> "systems/shadowrun6-eden/templates/parts/vehicle-weapons.html"}}
+		{{> "systems/shadowrun6-eden/templates/parts/vehicle-piloting.html"}}
+		{{> "systems/shadowrun6-eden/templates/parts/section-autosoft.html"}}
 
 		</div>
     </section>
