Fixed Vehicle Sheet layout so dropdowns use min-width instead of width to support longer localization translations (#37)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -74,10 +74,10 @@ line {
 }
 .vehicle-sheet .vehicle-section label {
   display: inline-block;
-	width: 135px;
+	width: 185px;
 }
 .vehicle-sheet .vehicle-section select {
-	width: 125px;
+	min-width: 200px;
 }
 
 .shadowrun6 th {
