--- a/templates/parts/vehicle-speed.html
+++ b/templates/parts/vehicle-speed.html
@@ -1,18 +1,18 @@
 <div class="vehicle-section">
 	<label>{{localize 'shadowrun6.label.type' }} </label>
 	<select name="vehicleType" data-field="system.vtype">
-		{{selectOptions this.config.skill_special.piloting selected=system.vtype localize=true}}
+		{{selectOptions config.skill_special.piloting selected=system.vtype localize=true}}
 	</select>
 </div>
 <div class="vehicle-section">
 	<label>{{localize 'shadowrun6.label.belongs_to' }} </label>
 	<select name="vehicleUser" class="vehicleUser" data-field="system.vehicle.belongs">
-		{{selectOptions this.options.allVehicleUser selected=system.vehicle.belongs}}
+		{{selectOptions actor.sheet.allVehicleUser selected=system.vehicle.belongs}}
 	</select>
 </div>
 <div class="vehicle-section">
 	<label>{{localize 'shadowrun6.label.mode_of_operation'}}</label> 
-	<select name="vehicleOpMode" data-field="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
+	<select name="vehicleOpMode" data-field="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{id}}">
 	{{selectOptions config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
 	</select>
 </div>
