Fix overwatch input field

--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -24,7 +24,7 @@
 	</div>     
     <div class="edge" style="width: 80px; height:80px">
 		<img src="systems/shadowrun6-eden/images/all-seeing-eye.webp" style="border: 0px; height: auto; width: 80px; z-index: 0; position:absolute; filter: drop-shadow(0 0 4px #000000);" />
-		<input name="matrixOverwatch" class="edge-value" type="text" data-dtype="Number" data-field="system.overwatch" value="{{system.overwatch}}" />
+		<input name="matrixOverwatch" class="edge-value" style="z-index: 2;" type="text" data-dtype="Number" data-field="system.overwatch" value="{{system.overwatch}}" />
     </div>
    </div>
 		<div class="section" style="width:inherit; margin-right: -5px; min-width: 275px;">
