New feature: Optional Rule: Armor Lessens Physical Damage (SWC)

--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -211,28 +211,44 @@
           <div class="resulttext" style="flex:2">{{ localize 'shadowrun6.roll.successfulSoak'}}</div>
         {{else}}
           <header class="part-header flexrow chat-edge-post">
-            <div>{{ localize 'shadowrun6.roll.failedSoak'}}</div>
+            <div style="display: flex; align-items: center;"><span>{{ localize 'shadowrun6.roll.failedSoak'}}</span></div>
             <br/>
             {{#if (eq monitor 'physical')}}
-            <div class="resulttext" style="flex:2; color: firebrick; line-height: 2em; font-size: 1.2em; font-weight: bold;">{{damage}} {{localize (concat 'shadowrun6.monitor.' monitor)}}</div>
+              <div class="resulttext" style="flex:2; display: flex; flex-direction: column;">
+                <span style="color: firebrick; line-height: 2em; font-size: 1.2em; font-weight: bold;">{{damage}} {{localize (concat 'shadowrun6.monitor.' monitor)}}</span>
+                {{#if damageConvertedStun}}
+                <span style="color: dodgerblue; font-size: 1.2em; font-weight: bold;">{{damageConvertedStun}} {{localize 'shadowrun6.monitor.stun'}}</span>
+                {{/if}}
+              </div>
             {{else}}
-            <div class="resulttext" style="flex:2; color: dodgerblue; line-height: 2em; font-size: 1.2em; font-weight: bold;">{{damage}} {{localize (concat 'shadowrun6.monitor.' monitor)}}</div>
+              <div class="resulttext" style="flex:2;">
+                <span style="color: dodgerblue; line-height: 2em; font-size: 1.2em; font-weight: bold;">{{damage}} {{localize (concat 'shadowrun6.monitor.' monitor)}}</span>
+              </div>
             {{/if}}
           </header>
 
           <hr>
 
           {{#if (or (eq actor.type "Spirit") (eq actor.type "Vehicle"))}}
-          <!-- Spirit and vehicle damage not yet automated; Spirits have astral form and no stun, while vehicle stun is matrix damage -->
-          <span style="font-style: italic;">{{localize 'shadowrun6.ui.notifications.apply_manually'}}</span>
+            <!-- Spirit and vehicle damage not yet automated; Spirits have astral form and no stun, while vehicle stun is matrix damage -->
+            <span style="font-style: italic;">{{localize 'shadowrun6.ui.notifications.apply_manually'}}</span>
           {{else}}
-          <button class="rollable{{#if damageApplied}} damageApplied{{/if}}" data-roll-type="damage" data-damage="{{damage}}" data-monitor="{{monitor}}" data-targetid="{{speaker.token}}" data-actorId="{{speaker.actor}}" data-sceneId="{{speaker.scene}}">
-            {{#if damageApplied}}
-              <span class="damage-apply-text">{{localize 'shadowrun6.roll.damage_applied'}}</span><span class="damage-revert-text">{{localize 'shadowrun6.roll.damage_revert'}}</span> ( <i class="fa-solid fa-rotate-left"></i> )
-            {{else}}
-              {{localize 'shadowrun6.roll.apply_damage'}} ({{damage}}{{#if (eq monitor "stun")}}S{{else}}P{{/if}})
+            <button class="rollable{{#if damageApplied}} damageApplied{{/if}}" data-roll-type="damage" data-damage="{{damage}}" data-monitor="{{monitor}}" data-targetid="{{speaker.token}}" data-actorId="{{speaker.actor}}" data-sceneId="{{speaker.scene}}">
+              {{#if damageApplied}}
+                <span class="damage-apply-text">{{localize 'shadowrun6.roll.damage_applied'}}</span><span class="damage-revert-text">{{localize 'shadowrun6.roll.damage_revert'}}</span> ( <i class="fa-solid fa-rotate-left"></i> )
+              {{else}}
+                {{localize 'shadowrun6.roll.apply_damage'}} ({{damage}}{{#if (eq monitor "stun")}}S{{else}}P{{/if}})
+              {{/if}}
+            </button>
+            {{#if damageConvertedStun}}
+            <button style="margin-top: 5px;" class="damageConvertedStun rollable{{#if damageApplied2}} damageApplied{{/if}}" data-roll-type="damage" data-damage="{{damageConvertedStun}}" data-monitor="stun" data-targetid="{{speaker.token}}" data-actorId="{{speaker.actor}}" data-sceneId="{{speaker.scene}}">
+              {{#if damageApplied2}}
+                <span class="damageConvertedStun damage-apply-text">{{localize 'shadowrun6.roll.damage_applied'}}</span><span class="damage-revert-text">{{localize 'shadowrun6.roll.damage_revert'}}</span> ( <i class="fa-solid fa-rotate-left"></i> )
+              {{else}}
+                {{localize 'shadowrun6.roll.apply_damage'}} ({{damageConvertedStun}}S)
+              {{/if}}
+            </button>
             {{/if}}
-          </button>
           {{/if}}
 
         {{/if}}
