--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -86,7 +86,7 @@
                 <label class="item-name" data-skill="{{id}}">{{item.name}}</label>
             </td>
             <td style="width: 10%"><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
-            <td style="width: 15%"><label class="middle-column" >{{attackrating item.system.attackRating}}</label></td>
+            <td style="width: 15%"><label class="middle-column" >{{attackrating item.calculated.attackRating}}</label></td>
             <td style="width: 20%"></td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
                 <label class="item-pool" data-skill="{{item.system.skill}}">{{item.system.pool}}</label>
