Mark deprecation TODO's

--- a/templates/actor/shadowrun6-Critter-sheet.html
+++ b/templates/actor/shadowrun6-Critter-sheet.html
@@ -1,4 +1,5 @@
 <!-- TODO Shadowrun6ActorSheetCritter is not in use  -->
+<!-- TODO rework #select -->
 
 <form class="{{cssClass}}" autocomplete="off">
   <div class="npc-firstline">
