--- a/templates/parts/initiatives.html
+++ b/templates/parts/initiatives.html
@@ -27,7 +27,7 @@
 			</tr>
 			<!-- Matrix Initiative -->
 			<tr>
-				<td ><b>{{ localize 'shadowrun6.initiative.matrix' }}</b></td>
+				<td ><b>{{ localize 'shadowrun6.initiative.matrix' }} <label style="font-size: var(--font-size-10);">[{{localize (concat 'shadowrun6.matrixini.' system.matrixIni)}}]</label></b></td>
 				<td style="text-align: right; padding-right: 50px;">{{initiative.matrix.base}} + <input name="matrixMod" class="centered box calcIni" data-field="system.initiative.matrix.mod" type="text" value="{{system.initiative.matrix.mod}}" data-dtype="Number" id="dataIniMatrixMod" style="width: 1.2em" ></td>
 				<td class="centered">
 				( {{system.initiative.matrix.dice}} +
