--- a/templates/parts/section-matrixactions.html
+++ b/templates/parts/section-matrixactions.html
@@ -1,17 +1,33 @@
-<div class="section" style="display: inline-block; width:60%; min-width: 383px;">
+<div class="section matrix-section" style="display: inline-block; width:60%; min-width: 383px;">
 	<div class="section-head">
 		<h2 class="section-title">{{ localize 'shadowrun6.section.matrix_actions.title' }}</h2>
+		<div class="matrix-access-container">
+			<div class="matrix-access-switch">
+				<input type="radio" id="matrix-access-switch-radio1" name="matrixAccess" value="outsider" {{#if matrixAccess.outsider}}checked{{/if}} />
+				<label for="matrix-access-switch-radio1">Outsider</label>
+				
+				<input type="radio" id="matrix-access-switch-radio2" name="matrixAccess" value="user" {{#if matrixAccess.user}}checked{{/if}}  />
+				<label for="matrix-access-switch-radio2">User</label>
+				
+				<input type="radio" id="matrix-access-switch-radio3" name="matrixAccess" value="admin" {{#if matrixAccess.admin}}checked{{/if}}  />
+				<label for="matrix-access-switch-radio3">Admin</label>
+				
+				<span id="active-label"></span>
+			</div>
+		</div>
 	</div>
 	<div style="column-count: 2; background: radial-gradient(circle at center, #B6B6A4 100%, transparent 100%) no-repeat center; background-size: 2px 100%; margin-right: 5px;">
-
- 		{{#each config.MATRIX_ACTIONS as |action actionId|}}
+		{{log 'JEROEN a' actor.system.persona.device.mod.a}}
+		{{log 'JEROEN s' actor.system.persona.device.mod.s}}
+ 		{{#each matrixActionAvailable as |action actionId|}}
+		{{log 'JEROEN' action}}
        	<div class="item" data-matrix-action-id="{{actionId}}" style="display: flex; font-size:small; align-items:center;">
-
-       		<label style="flex-grow:6">{{localize (concat 'shadowrun6.matrixaction.' actionId)}}</label>
+       		<label style="width: 15px; margin-right: 2px;">{{matrixAction action}}</label>
+			<label style="flex-grow:10">{{localize (concat 'shadowrun6.matrixaction.' actionId)}}</label>
          	{{#if (ne (matrixPool actionId ../actor) 0)}}
-         	<div class="skill-pool" style="flex-grow:0.9; text-align:right">
+         	<div class="skill-pool">
          		<label class="item-pool">{{matrixPool actionId ../actor}}</label>
-         		<a class="item-control matrix-roll" data-matrix-id="{{actionId}}" 
+         		<a class="item-control matrix-roll{{matrixAccessLevel ../matrixAccess action}}" data-matrix-id="{{actionId}}" 
 					title="{{localize (concat 'skill.' action.skill)}} ({{localize (concat (concat 'shadowrun6.special.' action.skill) (concat '.' action.specialization) ) }})">
 						<i class="fas fa-dice-six"></i>
 				</a>
@@ -19,7 +35,7 @@
 			{{else}}
          	<div class="skill-pool" style="flex-grow:0.9; text-align:right">
          		<label class="item-pool"></label>
-         		<label class="item-control matrix-roll" style="opacity:0"><i class="fas fa-dice-six"></i></label>
+         		<label class="item-control" style="opacity:0"><i class="fas fa-dice-six"></i></label>
          	</div>
          	{{/if}}
 
