--- a/templates/dialog/partRollDialogWeapon.html
+++ b/templates/dialog/partRollDialogWeapon.html
@@ -59,7 +59,7 @@
 				<!-- TODO rework #select -->
             	{{#select attackRating}}
             	{{#each data.calcAttackRating as |rating id|}}
-            		<option value="{{rating}}" data-item-ar="{{rating}}" name="{{id}}">{{localize (concat "shadowrun6.roll.ar_" id)}} - ({{rating}})</option>
+            		<option value="{{rating}}" data-item-ar="{{rating}}" data-distance="{{id}}" name="{{id}}">{{localize (concat "shadowrun6.roll.ar_" id)}} - ({{rating}})</option>
             	{{/each}}
             	{{/select}}
         		</select> 
